exposed card-styling as separate .css file

--- a/wp-content/themes/kikback/resources/css/kikback-events.css
+++ b/wp-content/themes/kikback/resources/css/kikback-events.css
@@ -9,7 +9,7 @@
 .kikback-events .card-body {
     display: inline-block;
     background-color: black;
-    min-width: 350px;
+    min-width: 253;
     padding: 10px;
 }
 
